--- a/styles/app.css
+++ b/styles/app.css
@@ -1713,7 +1713,9 @@ a {
   display: flex;
 }
 .first-family-content,
-.third-family-content {
+.third-family-content,
+.first-migration-content,
+.third-migration-content {
   margin-right: 5rem;
 }
 .content {
@@ -1795,7 +1797,8 @@ a {
 .first-business-content,
 .third-business-content,
 .first-invest-content,
-.third-invest-content {
+.third-invest-content,
+.second-migration-content {
   margin-left: 5rem;
 }
 .second-business-content,
@@ -1813,4 +1816,37 @@ a {
 .second-invest-content-row,
 .third-invest-content-row {
   flex-direction: row-reverse;
+}
+/* 
+<<<<<<<<<< Migration Page >>>>>>>>>>
+*/
+.migration-process-wrapper{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.migration-header{
+  background-image: url("../images/headers/imigration-header-min.jpg");
+}
+.migration-process__explain{
+  width: 80%;
+  margin-bottom: 2rem;
+}
+.migration-list__link{
+  color: #6D31D0;
+  position: relative;
+}
+.migration-list__link::before{
+  content: "";
+  position: absolute;
+  top: calc(50% - 0.35rem);
+  left: -1.7rem;
+  width: 0.7rem;
+  height: 0.7rem;
+  border-radius: 50%;
+  background-color: #6D31D0;
+}
+.migration-process__text{
+  margin-top: 4rem;
+  width: 80%;
 }
